# enbridgeScrape

./: .gitignore  NOtes  OCcsv.ipynb  checking.ipynb  explanation.ipynb  main.py  mainRunner.ipynb  metaExplore.ipynb  pyproject.toml
archive/: pipes.txt  schemaCreate.ipynb  stringExtract.ipynb  utils.ipynb
downloads/OA/: AG_OA_20251010_INTRDY_2025-10-11_0900.csv  BGS_OA_20251010_INTRDY_2025-10-11_0900.csv  BSP_OA_20251010_INTRDY_2025-10-11_0901.csv  EG_OA_20251010_INTRDY_2025-10-11_0900.csv  ET_OA_20251010_INTRDY_2025-10-11_0900.csv  GB_OA_20251010_INTRDY_2025-10-11_0900.csv  GPL_OA_20251010_INTRDY_2025-10-11_0900.csv  MCGP_OA_20251010_INTRDY_2025-10-11_0900.csv  MN_OA_20251010_INTRDY_2025-10-11_0901.csv  NPC_OA_20251010_INTRDY_2025-10-11_0900.csv  NXUS_OA_20251010_INTRDY_2025-10-11_0900.csv  SESH_OA_20251010_INTRDY_2025-10-11_0901.csv  SG_OA_20251010_INTRDY_2025-10-11_0900.csv  SR_OA_20251010_INTRDY_2025-10-11_0900.csv  STT_OA_20251010_INTRDY_2025-10-11_0901.csv  TE_OA_20251010_INTRDY_2025-10-11_0900.csv  TPGS_OA_20251010_INTRDY_2025-10-11_0901.csv
downloads/OC/: AG_OC_20251010_INTRDY_2025-10-11_0900.csv  BSP_OC_20251010_INTRDY_2025-10-11_0901.csv  ET_OC_20251012_INTRDY_2025-10-12_1400.csv  GB_OC_20251010_INTRDY_2025-10-11_0900.csv  MCGP_OC_20251010_INTRDY_2025-10-11_0900.csv  MN_OC_20251010_INTRDY_2025-10-11_0901.csv  NPC_OC_20251010_INTRDY_2025-10-11_0900.csv  NXUS_OC_20251010_INTRDY_2025-10-11_0900.csv  SESH_OC_20251010_INTRDY_2025-10-11_0901.csv  STT_OC_20251010_INTRDY_2025-10-11_0901.csv
src/Models/: EnbridgeMeta.db  EnbridgeMetaData.csv  GFPipes.db  GFPipes.db-shm  GFPipes.db-wal  OA_Processed.csv  OA_Processed24112025020551.csv  OA_Processed24112025191810.csv  OA_Processed27112025151217.csv  OA_Processed27112025151817.csv  OA_Processed27112025152307.csv  OA_Processed27112025152742.csv  OA_Processed27112025153533.csv
src/artifacts/: BaseLogWriters.py  ModelKeeper.py  __init__.py  azureDump.py  (+4 more)
(+2441 files in other folders)
